kubernetes/kube-lab/apps/observability/namespace.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master/namespace.json
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
